--- a/front/public/resources2/styles/body.css
+++ b/front/public/resources2/styles/body.css
@@ -1,520 +1,559 @@
-body {
-  background-color: #fafafa;
-  overflow-x: hidden;
-  font-family: Arial, sans-serif;
-}
-
-::-webkit-scrollbar {
-  display: none;
-}
-.main_container {
-  display: flex;
-  justify-content: space-between;
-  margin: 10px;
-}
-
-.main_body_iframe,
-.additional_line_iframe {
-  flex: 1;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.iframe {
-  width: 100%;
-  height: 100vh; /* 부모 요소의 높이를 사용하여 iframe 높이 설정 */
-  border: none;
-}
-
-/* 이하 기존 스타일 */
-article {
-  position: relative;
-  background-color: #fafafa;
-  border-radius: 10px;
-  margin: 30px;
-  display: grid;
-  place-items: center; /* 가로와 세로 중앙 정렬 */
-  right: 20px;
-}
-
-.main_body, .additional-line {
-  flex: 1;
-  display: flex;
-  position: relative;
-  text-align: center; /* 기사를 중앙으로 정렬합니다. */
-  justify-content: center;
-  flex-direction: column; /* 세로 방향으로 요소를 배치합니다. */
-  align-items: center; /* 요소를 수직 가운데 정렬합니다. */
-  width: 100%; /* 부모 요소에 맞춰 전체 너비를 확보합니다. */
-}
-
-aside {
-  position: fixed; /* 다른 요소에 영향을 주지 않도록 고정 위치 */
-  right: 0; /* 오른쪽에 위치 */
-  top: 0; /* 위쪽에 위치 */
-  height: 100%; /* 부모 요소의 높이를 사용하여 사이드바의 높이 설정 */
-}
-
-.none {
-  width: auto;
-  height: 40px;
-  padding-top: 75px;
-  background-color: #fafafa;
-}
-
-.feed {
-  width: 600px;
-  height: auto;
-}
-
-.story {
-  height: 117px;
-  border: 1px solid #dbdbdb;
-  border-radius: 3px;
-}
-
-.my_profile{
-  border-radius: 50%;
-}
-
-.feed_right_container{
-  position: sticky;
-  width: 450px;
-  top:0px;
-  right:100px;
-  margin-top:100px;
-}
-
-.my_profile {
-  display: flex;
-  height: 95px;
-  margin: 0px;
-}
-
-.recommendation_box {
-  display: flex;
-  justify-content: space-between;
-}
-
-.sub_story img {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  background-color: white;
-}
-
-.sub_story {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 66px;
-  height: 66px;
-  background-image: url("rainbow.png");
-  background-size: contain;
-}
-
-.empty_box {
-  height: 35px;
-}
-
-.text {
-  position: relative;
-  top: 11px;
-}
-
-.feed {
-  border-radius: 3px;
-}
-
-.feed_id {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  height: 70px;
-}
-
-.id_round {
-  display: flex;
-  position: absolute;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  top: 15px;
-  left: 10px;
-  width: 32px;
-  height: 32px;
-  background-size: contain;
-  border-radius: 50%;
-}
-
-.id_box {
-  display: flex;
-  position: absolute;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  left: 0px;
-  top:0px;
-  width: 536px;
-  height: 41px;
-}
-
-.id_container{
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  align-items: flex-start;
-  left: 10px;
-}
-
-.id_img{
-  width:32px;
-  height: 32px;
-  border-radius: 50%;
-}
-
-.id_name {
-  margin-bottom: 3px;
-  font-size: 14px;
-  font-weight: 600;
-}
-
-.place {
-  font-size: 12px;
-  color: blue;
-}
-
-.more_details {
-  position: relative;
-  right: -600px;
-}
-
-.more_details img {
-  display: flex;
-  justify-content: flex-end;
-  width: 40px;
-  height: 40px;
-}
-
-.feed_picture {
-  width: 598px;
-  height: 598px;
-}
-
-.feed_picture img {
-  width: 650px;
-  height: 598px;
-}
-
-.emoticon_box {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  height: 40px;
-  margin: 0px;
-}
-
-.emoticon_box2 {
-  display: flex;
-}
-
-.emoticon_box2 div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  margin: 0px;
-}
-
-.emoticon_box2 img {
-  width: 24px;
-  height: 24px;
-}
-
-.bookmark_box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-}
-
-.bookmark_box img {
-  width: 24px;
-  height: 24px;
-}
-
-.feed_like_box {
-  display: flex;
-  position: relative;
-  flex-direction: row;
-  align-items: center;
-  height: 30px;
-  left: 8px;
-  padding: 0 16px 0 8px;
-}
-
-.feed_like_box .feed_like {
-  display: flex;
-  position: relative;
-  left: 5px;
-  font-size: 14px;
-}
-
-.feed_like_picture {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  top: 15px;
-  left: 10px;
-  border: 1px solid #dbdbdb;
-}
-
-.feed_like_peolpe {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-}
-
-.feed_article {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
-
-.feed_article_box {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
-  padding: 0 16px 0 16px;
-}
-
-.comments_container {
-  display: flex;
-}
-
-.comments {
-  font-size: 14px;
-  line-height: 18px;
-  padding: 2px;
-}
-
-.comments1 {
-  padding: 2px;
-  font-size: 14px;
-  line-height: 18px;
-  color: #8e8e8e;
-}
-
-.comments1_box {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
-}
-
-.new_comments {
-  display: block;
-  text-align: start;
-}
-
-.newCommentBox {
-  padding: 2px;
-  font-size: 14px;
-  line-height: 18px;
-}
-
-.newCommentBox1 {
-  padding: 2px;
-  font-size: 14px;
-  line-height: 18px;
-}
-
-.comments2 {
-  font-size: 10px;
-  line-height: 18px;
-  color: #8e8e8e;
-  letter-spacing: 0.2px;
-}
-
-.inputContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 56px;
-  padding: 0 12px 0 12px;
-  margin: 0px;
-  border-top: 1px solid #efefef;
-}
-
-.inputBox {
-  background-color: #FAFAFA;
-  font: 14px;
+.slick-prev:before, .slick-next:before {
   color: black;
-  outline: none;
-  width: 550px;
-  height: 50px;
-  border: solid 0px;
 }
 
-.buttonBox {
-  background-color: #FAFAFA;
-  color: #C0E0FD;
-  outline: none;
-  border: solid 0px;
+.slick-dots li button:before {
+  color: black;
 }
 
-.type_comment {
-  display: flex;
-  justify-content: flex-start;
-  width: 530px;
-  font-size: 14px;
-  color: #8e8e8e;
+.slick-dots li.slick-active button:before {
+  color: black;
+}
+.slide-counter {
+  position: absolute;
+  right: 125px;
+  color: #ffffff; /* 텍스트 색상 */
+  background-color: rgba(0, 0, 0, 0.5); /* 배경색과 투명도 */
+  padding: 5px 10px; /* 내부 여백 */
+  z-index: 100; /* 다른 요소 위에 배치 */
 }
 
-.summit {
-  font-size: 14px;
-  color: #bee1fd;
-}
 
-.my_profile_box1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 66px;
-  height: 66px;
-  border: 1px solid gray;
-  border-radius: 50%;
-  background-size: contain;
-  flex-direction: column;
-}
+body {
+    background-color: #fafafa;
+    overflow-x: hidden;
+    font-family: Arial, sans-serif;
+  }
+  .icon-container{
+    display : flex;
+    flex-direction: row;
+  }
 
-.my_profile_box1 img {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-}
+  .allschool {
+    position: relative;
+    top: 80px;
+    left: 80px;
+  }
 
-.my_profile_id {
-  margin-left: 14px;
-  font-weight: 400;
-  line-height: 18px;
-}
+  .myschool{
+    position: relative;
+    left : 900px;
+  }
 
-.my_profile_id1 {
-  margin-left: 10px;
-}
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  .main_container {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+  }
 
-.my_profile_id2 {
-  margin-left: 10px;
-}
+  .main_body_iframe,
+  .additional_line_iframe {
+    flex: 1;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-.profile_none {
-  display: flex;
-  align-items: center;
-  position: relative;
-  top: 7px;
-  left: 30px;
-}
+  .iframe {
+    width: 100%;
+    height: 100vh; /* 부모 요소의 높이를 사용하여 iframe 높이 설정 */
+    border: none;
+  }
 
-.other_box {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  position: relative;
-  left: 35px;
-  top: -20px;
-  margin-top: 20px;
-}
+  /* 이하 기존 스타일 */
+  article {
+    position: relative;
+    background-color: #fafafa;
+    border-radius: 10px;
+    display: grid;
+    place-items: center; /* 가로와 세로 중앙 정렬 */
+    right: 20px;
+  }
 
-.span1 {
-  font-size: 11px;
-  color: #c7c7c7;
-}
+  .main_body, .additional-line {
+    flex: 1;
+    display: flex;
+    position: relative;
+    text-align: center; /* 기사를 중앙으로 정렬합니다. */
+    justify-content: center;
+    flex-direction: column; /* 세로 방향으로 요소를 배치합니다. */
+    align-items: center; /* 요소를 수직 가운데 정렬합니다. */
+    width: 100%; /* 부모 요소에 맞춰 전체 너비를 확보합니다. */
+  }
 
-.recommendation_box {
-  margin: 10px 120px 10px 40px;
-}
+  aside {
+    position: fixed; /* 다른 요소에 영향을 주지 않도록 고정 위치 */
+    right: 0; /* 오른쪽에 위치 */
+    top: 0; /* 위쪽에 위치 */
+    height: 100%; /* 부모 요소의 높이를 사용하여 사이드바의 높이 설정 */
+  }
 
-.comment {
-  font-size: 12px;
-  color: #262626;
-  font-weight: 600;
-}
+  .none {
+    width: auto;
+    height: 40px;
+    padding-top: 75px;
+    background-color: #fafafa;
+  }
 
-.users {
-  display: flex;
-  height: 290px;
-  flex-direction: column;
-}
+  .feed {
+    width: 600px;
+    height: auto;
+  }
 
-.my_profile_main_box {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
-  width: 63%;
-}
+  .story {
+    height: 117px;
+    border: 1px solid #dbdbdb;
+    border-radius: 3px;
+  }
 
-.my_profile_id_box {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-}
+  .my_profile{
+    border-radius: 50%;
+  }
 
-.my_profile_id1 {
-  font-size: 14px;
-  font-weight: 600;
-  color: #262626;
-}
+  .feed_right_container{
+    position: sticky;
+    width: 450px;
+    top:0px;
+    right:100px;
+    margin-top:100px;
+  }
 
-.my_profile_id2 {
-  font-size: 12px;
-  color: #8e8e8e;
-}
+  .my_profile {
+    display: flex;
+    height: 95px;
+    margin: 0px;
+  }
 
-.my_prodile_box2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 55px;
-  height: 55px;
-  background-image: url("rainbow.png");
-  background-size: contain;
-  flex-direction: column;
-}
+  .recommendation_box {
+    display: flex;
+    justify-content: space-between;
+  }
 
-.my_profile_box2 img {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
+  .sub_story img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: white;
+  }
 
-.user {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 48px;
-  margin: 5px 0 0 40px;
-}
+  .sub_story {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 66px;
+    height: 66px;
+    background-image: url("rainbow.png");
+    background-size: contain;
+  }
 
-.user_box {
-  height: 50%;
-}
+  .empty_box {
+    height: 35px;
+  }
+  .empty_box2 {
+    height: 35px;
+  }
 
-.follow {
-  font-size: 12px;
-  font-weight: 600;
-  color: #0095F6;
-}
 
-.recommendation {
-  font-size: 14px;
-  color: #8e8e8e;
-}
+  .text {
+    position: relative;
+    top: 11px;
+  }
+
+  .feed {
+    border-radius: 3px;
+  }
+
+  .feed_id {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    height: 70px;
+  }
+
+  .id_round {
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    top: 15px;
+    left: 10px;
+    width: 32px;
+    height: 32px;
+    background-size: contain;
+    border-radius: 50%;
+  }
+
+  .id_box {
+    display: flex;
+    position: absolute;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    left: 0px;
+    top:0px;
+    width: 536px;
+    height: 41px;
+  }
+
+  .id_container{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: flex-start;
+    left: 10px;
+  }
+
+  .id_img{
+    width:32px;
+    height: 32px;
+    border-radius: 50%;
+  }
+
+  .id_name {
+    margin-bottom: 3px;
+    font-size: 14px;
+    font-weight: 600;
+  }
+
+  .place {
+    font-size: 12px;
+    color: blue;
+  }
+
+  .more_details {
+    position: relative;
+    right: -600px;
+  }
+
+  .more_details img {
+    display: flex;
+    justify-content: flex-end;
+    width: 40px;
+    height: 40px;
+  }
+
+  .feed_picture {
+    width: 650px;
+    height: 598px;
+  }
+
+  .feed_picture img {
+    width: 650px;
+    height: 598px;
+  }
+
+  .emoticon_box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 40px;
+    margin: 0px;
+  }
+
+  .emoticon_box2 {
+    display: flex;
+  }
+
+  .emoticon_box2 div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    margin: 0px;
+  }
+
+  .emoticon_box2 img {
+    width: 24px;
+    height: 24px;
+  }
+
+  .bookmark_box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+  }
+
+  .bookmark_box img {
+    width: 24px;
+    height: 24px;
+  }
+
+  .feed_like_box {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    align-items: center;
+    height: 30px;
+    left: 8px;
+    padding: 0 16px 0 8px;
+  }
+
+  .feed_like_box .feed_like {
+    display: flex;
+    position: relative;
+    left: 5px;
+    font-size: 14px;
+  }
+
+  .feed_like_picture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    top: 15px;
+    left: 10px;
+    border: 1px solid #dbdbdb;
+  }
+
+  .feed_like_peolpe {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+  }
+
+  .feed_article {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .feed_article_box {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 0 16px 0 16px;
+  }
+
+  .comments_container {
+    display: flex;
+  }
+
+  .comments {
+    font-size: 14px;
+    line-height: 18px;
+    padding: 2px;
+  }
+
+  .comments1 {
+    padding: 2px;
+    font-size: 14px;
+    line-height: 18px;
+    color: #8e8e8e;
+  }
+
+  .comments1_box {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+
+  .new_comments {
+    display: block;
+    text-align: start;
+  }
+
+  .newCommentBox {
+    padding: 2px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .newCommentBox1 {
+    padding: 2px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .comments2 {
+    font-size: 10px;
+    line-height: 18px;
+    color: #8e8e8e;
+    letter-spacing: 0.2px;
+  }
+
+  .inputContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 56px;
+    padding: 0 12px 0 12px;
+    margin: 0px;
+    border-top: 1px solid #efefef;
+  }
+
+  .inputBox {
+    background-color: #FAFAFA;
+    font: 14px;
+    color: black;
+    outline: none;
+    width: 550px;
+    height: 50px;
+    border: solid 0px;
+  }
+
+  .buttonBox {
+    background-color: #FAFAFA;
+    color: #C0E0FD;
+    outline: none;
+    border: solid 0px;
+  }
+
+  .type_comment {
+    display: flex;
+    justify-content: flex-start;
+    width: 530px;
+    font-size: 14px;
+    color: #8e8e8e;
+  }
+
+  .summit {
+    font-size: 14px;
+    color: #bee1fd;
+  }
+
+  .my_profile_box1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 66px;
+    height: 66px;
+    border: 1px solid gray;
+    border-radius: 50%;
+    background-size: contain;
+    flex-direction: column;
+  }
+
+  .my_profile_box1 img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+  }
+
+  .my_profile_id {
+    margin-left: 14px;
+    font-weight: 400;
+    line-height: 18px;
+  }
+
+  .my_profile_id1 {
+    margin-left: 10px;
+  }
+
+  .my_profile_id2 {
+    margin-left: 10px;
+  }
+
+  .profile_none {
+    display: flex;
+    align-items: center;
+    position: relative;
+    top: 7px;
+    left: 30px;
+  }
+
+  .other_box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    left: 35px;
+    top: -20px;
+    margin-top: 20px;
+  }
+
+  .span1 {
+    font-size: 11px;
+    color: #c7c7c7;
+  }
+
+  .recommendation_box {
+    margin: 10px 120px 10px 40px;
+  }
+
+  .comment {
+    font-size: 12px;
+    color: #262626;
+    font-weight: 600;
+  }
+
+  .users {
+    display: flex;
+    height: 290px;
+    flex-direction: column;
+  }
+
+  .my_profile_main_box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 63%;
+  }
+
+  .my_profile_id_box {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+
+  .my_profile_id1 {
+    font-size: 14px;
+    font-weight: 600;
+    color: #262626;
+  }
+
+  .my_profile_id2 {
+    font-size: 12px;
+    color: #8e8e8e;
+  }
+
+  .my_prodile_box2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 55px;
+    height: 55px;
+    background-image: url("rainbow.png");
+    background-size: contain;
+    flex-direction: column;
+  }
+
+  .my_profile_box2 img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
+
+  .user {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 48px;
+    margin: 5px 0 0 40px;
+  }
+
+  .user_box {
+    height: 50%;
+  }
+
+  .follow {
+    font-size: 12px;
+    font-weight: 600;
+    color: #0095F6;
+  }
+
+  .recommendation {
+    font-size: 14px;
+    color: #8e8e8e;
+  }
