--- a/front/public/resources2/styles/nav.css
+++ b/front/public/resources2/styles/nav.css
@@ -8,17 +8,19 @@ header {
   top: 0;
   padding: 0 20% 0 20%;
   border-bottom: solid 1px #dbdbdb;
-  background-color: white;
+  background-color: #fafafa;
   z-index: 999;
 }
 .logoFont{
   font-family: "Noto Serif", serif;
   font-optical-sizing: auto;
-  font-weight: 400; /* 보통(normal) 또는 400 */
+  font-weight: 400;
   font-style: normal;
-  font-variation-settings:
-          "wdth" 100;
+  font-variation-settings: "wdth" 100;
+  position: relative;
+  right: 220px;
 }
+
 
 .middle_box {
   display: inline;
@@ -29,7 +31,7 @@ header {
   position: relative;
   justify-content: space-around;
   align-items: center;
-  right: 80px;
+  left: 250px;
   width: 222px;
 }
 
@@ -56,6 +58,8 @@ header {
 }
 .logo {
   width: 103px;
+  position: relative;
+  right: 200px;
 }
 
 .logo_box {
@@ -75,7 +79,7 @@ header {
   left: -10px;
   top: -2px;
   height: 27px;
-  width: 300px;
+  width: 450px;
   background-color: #fafafa;
   border: 1px solid #dbdbdb;
 }
@@ -83,7 +87,7 @@ header {
 .magnifier {
   position: absolute;
   top: 35%;
-  left: 42.3%;
+  left: 43.3%;
   width: 12px;
   height: 12px;
 }
