--- a/front/src/Project/projectList.css
+++ b/front/src/Project/projectList.css
@@ -1,32 +1,67 @@
 
+  .project-empty_box{
+    height: 50px;
+  }
+  .project-empty_box2{
+    width: 80px;
+  }
+  .project-header-text {
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    top: 85px;
+    left: 65px;
+    gap: 50px;
+    color: #007aff;
+    border-bottom: solid 1px;
+    text-align: center;
+  }
 
-.project-header-text {
+  .project-card-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    margin-left: 60px;
+    flex-wrap: wrap;
+  }
+  .cards-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
 
-  top: 85px;
-  left: 65px;
-  color: #007aff;
-  border-bottom: solid 1px;
-  text-align: center;
 }
 
-.card-container {
-  display: grid;
-  grid-template-columns: repeat(2 , 1fr);
-  gap: 20px;
-  margin-top: 100px;
-  padding: 20px;
-  margin-left: 50px;
+@keyframes blink {
+  0%, 100% {
+    opacity: 2;
+  }
+  50% {
+    opacity: 0.2;
+  }
+}
+
+.project-end {
+  display: flex;
+  justify-content: end;
+  margin-top: 30px;
+  font-size: 13px;
+  color: red;
+  animation: blink 2s infinite;
 }
 
 .project-card {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+  width: 35%;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
-}
+  margin-right: 30px;
+  margin-left: 30px;
+ }
+
 
 .project-header {
   display: flex;
@@ -46,10 +81,17 @@
 }
 
 .project-bookmark {
+  display: flex;
+  justify-content: center;
   width: 20px;
   height: 20px;
-  background-color: orange;
+  margin-bottom: 5px;
+
+  /*background-color: orange;
   clip-path: polygon(50% 0%, 100% 38%, 79% 100%, 21% 100%, 0% 38%);
+*/}
+.project-bookmark-image{
+  width: 20px;
 }
 
 .project-body {
@@ -104,3 +146,95 @@
 .request-button:hover {
   background-color: darkblue;
 }
+.project-header-button{
+  display: flex;
+  flex-direction: row;
+  align-self: flex-start;
+  margin-left: 220px;
+  margin-bottom: 20px;
+  gap: 20px;
+  font-size: 12px;
+
+}
+  .project-dontsee {
+    background-color: #007aff;
+    color: white;
+    border: none;
+    padding: 5px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-size: 12px;
+  }
+
+  .project-dontsee:hover {
+    background-color: #0056b3;
+  }
+  .request-button-sucess{
+    align-self: flex-end;
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .request-button-sucess:hover {
+    background-color: darkred;
+  }
+  .side-allschool{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 4px;
+
+  }
+  .sidebar-logo{
+  display: flex;
+    margin-left: 50px;
+  }
+  .sidebar-logo-img{
+    width: 100px;
+  }
+  .project-seach{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    justify-content: end;
+    margin-right: 190px;
+  }
+  .project-seach-box {
+    display: flex;
+    justify-content: end;
+    height: 25px;
+    background-color: #fafafa;
+
+  }
+  .pj-search{
+    display: flex;
+    text-align: center;
+    height: 27px;
+    width: 250px;
+    margin-right: 10px;
+    background-color: #fafafa;
+    border: 1px solid #dbdbdb;
+
+  }
+  .project-seach-button{
+    border-radius: 5px;
+    padding: 0 1% 0;
+    margin-right: 20px;
+    font-size: 10px
+  }
+  .project-magnifier {
+  width: 10px;
+  }
+  .project-arrow{
+    border-radius: 5px;
+    border: solid 1px;
+  }
+  .arrow {
+    margin-left: 5px;
+    font-size: 8px; /* 화살표 크기 조절 */
+    color: #007aff; /* 화살표 색상 설정 */
+  }
