--- a/front/src/BookmarkProject/bookmarkProject.css
+++ b/front/src/BookmarkProject/bookmarkProject.css
@@ -5,51 +5,82 @@
     justify-content: space-between;
        background-color: #ffffff;
     border: 1px solid #ddd;
-    padding: 20px;
+    margin-left: 50px;
+
+
+
 }
 
-.project, .scrapped-projects {
-    flex: 1;
+.project{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     margin: 10px;
 }
-
+.scrapped-projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-left: solid 1px;
+    padding-left : 20px;
+    margin-right: 30px;
+}
 .project img {
-    width: 100%;
+    margin-top:20px;
+    width: 80%;
     height: auto;
+    align-self: center;
 }
 
-.project-info {
-    border: 1px solid #ddd;
+.bookmarkProject-project-info {
+    display: flex;
+    flex-direction: column;
     padding: 10px;
-    margin-top: 10px;
-    background-color: #f1f1f1;
+    margin-left: 100px;
 }
 
-.project-info h2 {
+.project-info h2{
     margin-top: 0;
 }
+.bookmarkProject-h2{
+    margin-top: 30px;
+    margin-bottom: 20px
 
-.apply-button {
-    display: inline-block;
+}
+.bookmarkProject-header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.bookmarkProject-apply-button {
     padding: 10px 20px;
-    background-color: #4285f4;
-    color: white;
-    border: none;
     cursor: pointer;
     margin-top: 10px;
+    margin-left: 400px;
+    background-color: white;
+    border: solid 1px;
+    border-radius: 8px;
+
 }
 
 .apply-button:hover {
     background-color: #357ae8;
 }
+.bookmarkProject-important{
+    color: red;
+}
 
-.project-description, .warning {
-    margin-top: 10px;
+.bookmarkProject-project-description {
     font-size: 0.9em;
+    margin-left: 100px;
+    font-weight: bold;
 }
 
 .warning {
     color: red;
+    margin-left: 100px;
+    margin-top: 50px;
 }
 
 .scrapped-projects h2 {
@@ -61,6 +92,8 @@
     padding: 10px;
     margin-bottom: 10px;
     background-color: #f1f1f1;
+    width: 400px;
+
 }
 
 .view-button {
