--- a/front/src/Project/projectList.css
+++ b/front/src/Project/projectList.css
@@ -226,6 +226,7 @@
     margin-right: 20px;
     font-size: 10px
   }
+
   .project-magnifier {
   width: 10px;
   }
@@ -237,3 +238,40 @@
     font-size: 5px; /* 화살표 크기 조절 */
     color: #007aff; /* 화살표 색상 설정 */
   }
+.project-create-container{
+  margin-right: 440px;
+
+}
+.project-create{
+  background-color: #007aff;
+  color: white;
+  border: none;
+  padding: 5px 15px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  font-size: 12px;
+}
+.project-create:hover{
+  background-color: #0056b3;
+}
+.project-seach-button:hover{
+  background-color: #7a7a7a;
+}
+.project-d-day-end{
+  display: flex;
+  justify-content: end;
+  margin-top: 30px;
+  font-size: 13px;
+  color: #6e6c6c;
+}
+
+
+.end-request-button {
+  align-self: flex-end;
+  background-color: #6e6c6c;
+  color: white;
+  border: none;
+  padding: 10px 35px;
+  border-radius: 5px;
+  cursor: pointer;
+}
