--- a/front/src/CreateProject/createProjectBody.css
+++ b/front/src/CreateProject/createProjectBody.css
@@ -81,7 +81,7 @@
 }
 
 .cancel-button, .confirm-button {
-    width: 48%;
+    width: 250px;
     padding: 0.75rem;
     border: none;
     border-radius: 4px;
@@ -100,5 +100,64 @@
 }
 
 .cancel-button:hover, .confirm-button:hover {
+    opacity: 0.9;
+}
+
+
+
+/* Modal styles */
+.calendar-modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
+.calendar-modal {
+    background: #fff;
+    padding: 2rem;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.calendar-modal h2 {
+    margin-top: 0;
+}
+
+.calendar-modal .calendar-input {
+    margin: 1rem 0;
+    padding: 0.5rem;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: calc(50% - 1rem);
+}
+
+.calendar-modal button {
+    margin: 1rem 0.5rem 0 0.5rem;
+    padding: 0.75rem 1rem;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.calendar-modal button:first-of-type {
+    background-color: #007bff;
+    color: #fff;
+}
+
+.calendar-modal button:last-of-type {
+    background-color: #dc3545;
+    color: #fff;
+}
+
+.calendar-modal button:hover {
     opacity: 0.9;
 }
