--- a/front/public/resources2/styles/body.css
+++ b/front/public/resources2/styles/body.css
@@ -628,3 +628,24 @@
       font-size: 14px;
       color: #8e8e8e;
     }
+
+    .myprofile-container{
+        display: flex;
+        margin-top: 100px;
+        align-items: center;
+        justify-content: space-between;
+        position: relative;
+        width: 100%;
+        height: 50rem;
+        padding: 0 8rem;
+        z-index: 100;
+    }
+    .myprofile-img{
+        margin: 0 auto;
+        margin-left: 30rem;
+        margin-bottom: 20rem;
+        width: 100px;
+        height: 100px;
+        border: 5px solid rgb(163, 151, 198);
+        border-radius: 50%;
+    }
