--- a/front/public/resources2/styles/body.css
+++ b/front/public/resources2/styles/body.css
@@ -1,10 +1,98 @@
+body {
+    background-color: #fafafa;
+    font-family: Arial, sans-serif;
+}
+
+.main_container {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.iframe-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 48%;
+}
+
+.main_body_iframe,
+.additional_line_iframe {
+    width: 100%;
+    height: 500px; /* Adjust the height as needed */
+    border: none;
+}
+
+.iframe {
+    width: 100%;
+    height: 100vh; /* Set the height as needed */
+    border: none;
+}
+
+.toggle-container {
+    display: flex;
+    align-items: center;
+    margin-top: 80px;
+
+}
+
+.toggle-text {
+    margin-left: 10px;
+    font-size: 16px;
+    color: #007bff;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #007bff;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
 .slick-slider .slick-prev:before,
 .slick-slider .slick-next:before {
     color: white !important; /* 원하는 색상으로 변경 */
     opacity: 1 !important;
     position: relative !important;
     width: 50px;
-
 }
 
 /* 도트 색상 변경 */
@@ -16,6 +104,7 @@
 .slick-slider .slick-dots li.slick-active button:before {
     color: green !important; /* 활성화된 도트의 색상 */
 }
+
 .slide-counter {
     position: absolute;
     color: #ffffff; /* 텍스트 색상 */
@@ -28,42 +117,36 @@
     color: #ffffff; /* 텍스트 색상 */
     padding: 5px 10px; /* 내부 여백 */
     z-index: 100; /* 다른 요소 위에 배치 */
-
 }
-.camera_box{
+
+.camera_box {
     position: relative;
     text-align: center;
 }
-.card-container{
+
+.card-container {
     display: flex;
     flex-wrap: wrap;
     gap: 16px;
     margin: 16px;
 }
 
-
-
-body {
-    background-color: #fafafa;
-    overflow-x: hidden;
-    font-family: Arial, sans-serif;
-}
-.icon-container{
-    display : flex;
+.icon-container {
+    display: flex;
     flex-direction: row;
 }
-.sidebar {
-     width: 60px;
-     height: 100vh;
-     background-color: #fafafa;
-     position: fixed;
-     transition: width 0.3s, background-color 0.3s;
-     border-right: 3px solid #afacac;
-     padding-right: 60px;
-     overflow: hidden; /* 내용이 넘치지 않도록 숨기기 */
-    border-radius: 15px;
- }
 
+.sidebar {
+    width: 60px;
+    height: 100vh;
+    background-color: #fafafa;
+    position: fixed;
+    transition: width 0.3s, background-color 0.3s;
+    border-right: 3px solid #afacac;
+    padding-right: 60px;
+    overflow: hidden; /* 내용이 넘치지 않도록 숨기기 */
+    border-radius: 15px;
+}
 
 .sidebar:hover {
     width: 150px;
@@ -73,7 +156,6 @@ body {
     margin-left: 80px;
     transition: margin-left 0.3s;
 }
-
 
 .allschool {
     list-style-type: none;
@@ -86,79 +168,54 @@ body {
     margin-left: 4px;
 }
 
-
 .sidebar-link {
-
     display: flex;
     align-items: center;
     width: 100%;
     padding: 10px 0;
     text-decoration: none;
     color: black;
-
 }
-.sidebar:hover {
 
+.sidebar:hover {
     background-color: #ddf0fa; /* 원하는 색상으로 변경 */
 }
-.link-text:hover {
 
+.link-text:hover {
     background-color: #b6e3fa; /* 원하는 색상으로 변경 */
 }
+
 .link-text {
     margin-left: 10px;
     white-space: nowrap; /* 텍스트가 줄바꿈되지 않도록 설정 */
     color: #007aff;
 }
-.link-text-a{
+
+.link-text-a {
     font-size: 10px;
     text-align: center;
     color: #007aff;
 }
-.link-text-b{
+
+.link-text-b {
     font-size: 10px;
     text-align: center;
     color: #007aff;
-
 }
 
 .expanded-content {
     padding-left: 20px;
 }
 
-
-.myschool{
+.myschool {
     position: relative;
-    left : 900px;
+    left: 900px;
 }
 
 ::-webkit-scrollbar {
     display: none;
 }
-.main_container {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 140px;
-    margin-right: 30px;
 
-}
-
-.main_body_iframe,
-.additional_line_iframe {
-    flex: 1;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.iframe {
-    width: 100%;
-    height: 100vh; /* 부모 요소의 높이를 사용하여 iframe 높이 설정 */
-    border: none;
-}
-
-/* 이하 기존 스타일 */
 article {
     position: relative;
     background-color: #fafafa;
@@ -166,6 +223,7 @@ article {
     display: grid;
     place-items: center;
 }
+
 .art {
     position: relative;
     background-color: #fafafa;
@@ -174,7 +232,7 @@ article {
     place-items: center;
 }
 
-.main_body, .additional-line, .aside {
+.main_body, .additional-line {
     flex: 1;
     display: flex;
     position: relative;
@@ -203,13 +261,12 @@ article {
     border-radius: 3px;
 }
 
-.my_profile{
+.my_profile {
     border-radius: 50%;
 }
 
-.feed_right_container{
-
-    margin-top:100px;
+.feed_right_container {
+    margin-top: 100px;
 }
 
 .my_profile {
@@ -244,7 +301,6 @@ article {
 .empty_box {
     height: 80px;
 }
-
 
 .text {
     position: relative;
@@ -283,12 +339,12 @@ article {
     align-items: flex-start;
     justify-content: flex-start;
     left: 0px;
-    top:0px;
+    top: 0px;
     width: 536px;
     height: 41px;
 }
 
-.id_container{
+.id_container {
     display: flex;
     position: relative;
     flex-direction: column;
@@ -296,8 +352,8 @@ article {
     left: 10px;
 }
 
-.id_img{
-    width:32px;
+.id_img {
+    width: 32px;
     height: 32px;
     border-radius: 50%;
 }
@@ -312,17 +368,20 @@ article {
     font-size: 12px;
     color: blue;
 }
+
 .feed_img {
     display: flex;
     justify-content: center;
     height: 700px;
 }
+
 .social_interaction {
     position: relative;
     display: flex;
     justify-content: space-between;
     height: 80px;
 }
+
 .like_container,
 .like_container img {
     position: relative;
@@ -693,7 +752,7 @@ textarea:focus, input:focus {
 .my_profile_box2 img {
     width: 40px;
     height: 40px;
-    border-radius: 50%;
+    border-radius: 50px;
 }
 
 .user {
@@ -719,6 +778,28 @@ textarea:focus, input:focus {
     color: #8e8e8e;
 }
 
-aside{
-
+aside {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
+
+.toggle-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.toggle-button:hover {
+    background-color: #0056b3;
+}
+
+/*.toggle-container {*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    height: 50px;*/
+/*  */
+/*}*/
